--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -1,20 +1,13 @@
 name: Generate Datas
 
-
 on:
-
   schedule: # execute every 12 hours
-  
-  - cron: "* */12 * * *"
-  
+    - cron: "0 */12 * * *"
   workflow_dispatch:
 
 jobs:
-
   build:
-  
     name: Jobs to update datas
-
     runs-on: ubuntu-latest
 
     steps:
@@ -23,15 +16,13 @@ jobs:
         id: snake-gif
         with:
           github_user_name: EliasFhub
-          
           svg_out_path: dist/github-contribution-grid-snake.svg
 
-
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
+      # Deploy to GitHub Pages
+      - name: Deploy to GitHub Pages
+        uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
-          
           build_dir: dist
-
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
